tests/pass/assign_attribute.jlite
class Test {
    Void main() {
        A a;
        a.a = 56;
    }
}

class A {
    Int a;
}