tests/fail/invalid_method_name.jlite
class Main {
    Void main(){
        return;
    }
}
// This class name does not begin with a caps !
class Test {
    Void Test() {
        return;
    }
}